# Sundeck

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1  build.sh  launch.py  lib.py  pyproject.toml  steam.py  sunshine.py  update_config.py
backend/: cli.py  elevation.py  main.py  models.py  persistence.py  pyproject.toml  server.py  settings.json.bak  startup.py  steam.py  sunshine.py  sync_engine.py  test_server.py  test_steam.py  test_sunshine.py  tray.py
python/: pyproject.toml  server.py  steam.py  sunshine.py  test_server.py  test_steam.py
scripts/: build_exe.ps1  build_ui.ps1  dev_server.ps1  reset_settings.ps1  start_server.ps1
ui/: GameCard.tsx  LogPanel.tsx  SettingsPanel.tsx  SetupModal.tsx  api.ts  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  renderer.tsx  styles.css  tsconfig.json  types.ts  utils.ts
ui/test/: main.test.js  renderer.test.js  renderer.test.tsx
